objects/amc__Project_Request__c.object
<CustomObject>
    <description>The Project Request Object enables Users to submit a request for a new Project to be created. It can also be used to automatically generate the Project based on a template.</description>
    <fields>
        <fullName>amc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Account this Project Request was generated from</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Case this Project Request was generated from</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Contact this Project Request was generated from</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Generate_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set this field to TRUE to auto-generate the Project</inlineHelpText>
        <label>Generate Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Lead this Project Request was generated from</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Opportunity this Project Request was generated from</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project_Name__c</fullName>
        <inlineHelpText>Identifies the name to use when creating the Project</inlineHelpText>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project_Request_Summary__c</fullName>
        <inlineHelpText>Identifies the summary information relating to this Project Request</inlineHelpText>
        <label>Project Request Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project_Start_Date__c</fullName>
        <inlineHelpText>Identifies the date that will be used for scheduling the Project</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Project that will be used as a Template when auto-generating a new Project from this Project Request</inlineHelpText>
        <label>Project Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>amc__Project__c.amc__Template__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Project this request generated.</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Project Requests (Project)</relationshipLabel>
        <relationshipName>Project_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Proposed_Budget__c</fullName>
        <inlineHelpText>Identifies the anticipated budget required to deliver this Project</inlineHelpText>
        <label>Proposed Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project Request</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRQ:{00000}</displayFormat>
        <label>Project Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Ensure_Project_Name</fullName>
        <active>true</active>
        <description>Ensures required fields are populated if Generate Project = TRUE</description>
        <errorConditionFormula>AND( amc__Generate_Project__c = TRUE , ISBLANK(amc__Project_Name__c) )</errorConditionFormula>
        <errorMessage>You must specify a Project Name if Generate Project = TRUE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Project_Start_Date</fullName>
        <active>true</active>
        <description>Ensures required fields are populated if Generate Project = TRUE</description>
        <errorConditionFormula>AND( amc__Generate_Project__c = TRUE , ISBLANK(amc__Project_Start_Date__c) )</errorConditionFormula>
        <errorMessage>You must specify a Project Start Date if Generate Project = TRUE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Project_Template_Specified</fullName>
        <active>true</active>
        <description>Ensures required fields are populated if Generate Project  = TRUE</description>
        <errorConditionFormula>AND( amc__Generate_Project__c = TRUE , ISBLANK(amc__Project_Template__c))</errorConditionFormula>
        <errorMessage>You must specify a Project Template if Generate Project = TRUE</errorMessage>
    </validationRules>
</CustomObject>